# Portfolio

./: .gitignore  Dockerfile  docker-compose.yml  notes.txt  pyproject.toml  run.py
.github/workflows/: ARM32-nginx.yml  ARM32-setup.yml  docker-build.yml  nginx-config.yml
backend/: __init__.py  start.py
backend/API/: chatbot.py  personalapi.json
backend/app.egg-info/: PKG-INFO  SOURCES.txt
frontend/static/js/: chatbot.js  intro.js
frontend/templates/: home.html  index.html
frontend/templates/stuff/: about.html  certification.html  pi.html  project.html  social.html
nginx/: Dockerfile  nginx.conf
