[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "app"
version = "0.1.0"
description = "Flask app using src layout"
dependencies = [
    "flask",
    "requests",
    "pytest",
    "python-dotenv"
]

[tool.setuptools]
packages = { find = { where = ["backend"] } }
